--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,6 +223,8 @@
     <string name="start_clinic">Start Clinic</string>
     <string name="stop_clinic">End Clinic</string>
     <string name="select_clinic">Select a Clinic from Below</string>
+    <string name="clinics_started">Clinics Started Today</string>
+    <string name="clinics_not_started">Clinics Not Running</string>
 
     <!-- MIDWIFERY LOG -->
     <string name="enter_note_hint"><i>Enter Note Here . . .</i></string>
