--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,6 +246,7 @@
     <string name="stop_clinic">End Clinic</string>
     <string name="select_clinic">Select a Clinic from Below</string>
     <string name="clinics_started">Clinics Started Today</string>
+    <string name="clinics_stopped">Clinics Stopped Today</string>
     <string name="clinics_not_started">Clinics Not Running</string>
 
     <!-- MIDWIFERY LOG -->
