--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -214,7 +214,7 @@
     <string-array name="hearing_list">
         <item>None</item>
         <item>Complete</item>
-        <item>Appt Given</item>
+        <item>Appt given</item>
         <item>Declined</item>
     </string-array>
     <string-array name="feeding_list">
