--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,8 @@
     <string name="post_code">Post Code</string>
     <string name="kin_name">Next Of Kin Name</string>
     <string name="kin_contact">Next Of Kin Contact Number</string>
-    <string name="add_action">Add \nAction</string>
+    <string name="add_action">Action</string>
+    <string name="appointment">Appointment</string>
 
 	<!-- ANTE NATAL -->
 	<string name="age">Age</string>
